--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,17 +1,8 @@
-<div class="w-100 h-100 p-32">
-<%= form_with model: [@post, @comment], url: create_post_comment_path  do |form| %>
-      <% if @comment.errors.any? %>
-        <div>
-          <% @comment.errors.full_messages.each do |message| %>
-            <div><%= message %></div>
-          <% end %>
-        </div>
-      <% end %>
-      <div class="mb-4 flex flex-col">
-        <%= form.text_field :text, placeholder: "Add new comment here", class: "text-[#11537d] p-3" %>
-      </div>
-      <div class="mb-4 flex flex-col">
-        <%= form.submit "Comment" , class: "text-[#11537d] text-xl font-medium bg-white px-4 py-2 rounded-[15px] w-fit cursor-pointer" %>
-      </div>
-<% end %>
+<div>
+  <h2>Create a new comment</h2>
+  <%= form_with url: comment_create_path, model: Comment do |form| %>
+  <%= form.hidden_field :post_id, value: @post.id %>
+  <%= form.text_area :text, placeholder: 'Insert your Text here' %><br>
+  <%= form.submit "Add new comment" %>
+  <% end %>
 </div>
