--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,9 @@
+<%= render "shared/header" %>
 <div class="users-container">
   <% @users.each do |user| %>
     <%= link_to user_path(user), :class => 'user-button' do %>
       <div class="user-card">
-         <%= image_tag user.photo, :class => "user-image", :alt => "user-image" %>
+         <img src="<%= user.photo %>" class="user-image" alt="user-image">
         <div class="user-data">
           <h1><%= user.name %></h1>
           <span>Number of posts: <%= user.posts_counter %></span>
