Add-authorization-rules

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,4 @@
+<%= render "shared/header" %>
  <%= render "shared/user_data"%>
  <div class="posts-container">
   <% @posts.each_with_index do |post, index| %>
